tomcat Dockerfile 수정

--- a/community-docker/Dockerfile
+++ b/community-docker/Dockerfile
@@ -1,15 +1,16 @@
-FROM tomcat:10.1-jdk17
+# JRE17 사용 (Alpine은 Tomcat 10.1에서 공식 지원 안 함)
+FROM tomcat:10.1-jre17
 
-# 기본 앱 제거
-RUN rm -rf /usr/local/tomcat/webapps/*
+# 불필요한 파일 제거
+RUN rm -rf /usr/local/tomcat/webapps/* \
+    /usr/local/tomcat/webapps.dist \
+    /usr/local/tomcat/temp/*
 
-# MySQL Connector를 Tomcat lib로 복사 (중요!)
+# MySQL Connector 복사
 COPY webapp/WEB-INF/lib/mysql-connector-j-8.0.33.jar /usr/local/tomcat/lib/
 
 # WAR 파일 복사
 COPY build/community.war /usr/local/tomcat/webapps/ROOT.war
 
-# 포트 노출
 EXPOSE 8080
-
 CMD ["catalina.sh", "run"]
