--- a/community-docker/nginx/Dockerfile
+++ b/community-docker/nginx/Dockerfile
@@ -1,5 +1,7 @@
-FROM nginx:1.25.3-alpine
-
+FROM nginx:1.14-alpine
+  
 COPY conf.d/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
