--- a/community-docker/nginx/conf.d/default.conf
+++ b/community-docker/nginx/conf.d/default.conf
@@ -1,26 +1,13 @@
-upstream tomcat {
-    server community-tomcat:8080;
-}
-
 server {
     listen 80;
     server_name localhost;
 
-    # 정적 파일 (Nginx가 직접 서빙)
-    location ~ ^/(css|img|js|fonts)/ {
-        root /usr/share/nginx/html;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # 동적 콘텐츠 (Tomcat으로 프록시)
     location / {
-        proxy_pass http://tomcat;
+        proxy_pass http://tomcat-service.was.svc.cluster.local:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
