--- a/community-docker/was/tomcat-deployment.yaml
+++ b/community-docker/was/tomcat-deployment.yaml
@@ -10,35 +10,70 @@ spec:
   selector:
     matchLabels:
       app: tomcat-was
+
+  # RollingUpdate 전략은 여기 있어야 한다
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 0
+
   template:
     metadata:
       labels:
         app: tomcat-was
+
     spec:
       containers:
       - name: tomcat-container
-        # 여기 부분 꼭 자기거에 맞게 !!
-        image: 311278774159.dkr.ecr.ap-northeast-2.amazonaws.com/community-tomcat:v1.0
+        image: 012079073638.dkr.ecr.ap-northeast-2.amazonaws.com/project-tomcat:1.0
         ports:
         - containerPort: 8080
-        resources:
-          requests:
-            cpu: 500m
-            memory: 512Mi
-          limits:
-            cpu: 1000m
-            memory: 1Gi
+
         livenessProbe:
           httpGet:
             path: /
             port: 8080
-          initialDelaySeconds: 60
-          periodSeconds: 10
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          timeoutSeconds: 5
+
         readinessProbe:
           httpGet:
             path: /
             port: 8080
-          initialDelaySeconds: 30
+          initialDelaySeconds: 5
           periodSeconds: 5
+          timeoutSeconds: 5
+
+        resources:
+          requests:
+            cpu: 500m
+            memory: 1Gi
+          limits:
+            cpu: 500m
+            memory: 1Gi
+
+      topologySpreadConstraints:
+      - maxSkew: 1
+        topologyKey: kubernetes.io/hostname
+        whenUnsatisfiable: ScheduleAnyway
+        labelSelector:
+          matchLabels:
+            app: tomcat-was
+
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - tomcat-was 
+              topologyKey: kubernetes.io/hostname
+
       imagePullSecrets:
       - name: ecr-secret
